[package]
name = "pgwire-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
pgwire = "0.36.3"
bytes = "1.11.0"
deadpool-postgres = "0.14.1"
deadpool = "0.12.3"
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1"] }
tokio-util = "0.7.17"
env_logger = "0.11.8"
log = "0.4.29"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0.145"
dashmap = "6.1.0"
log4rs = "1.4.0"
governor = "0.10.2"
nonzero_ext = "0.3.0"